--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -8,7 +8,12 @@
 @import "paginate.css";
 
 
-
+#geolocation{
+ width: 355px;
+ height: 200px;
+ float: right;
+ margin-right: 100px;
+}
 
 .image_business{
   height:80%;
@@ -23,9 +28,6 @@
 img {
   filter: gray; /* IE6-9 */
 
-    -webkit-box-shadow: 0px 2px 6px 2px rgba(0,0,0,0.75);
-    -moz-box-shadow: 0px 2px 6px 2px rgba(0,0,0,0.75);
-    box-shadow: 0px 2px 6px 2px rgba(0,0,0,0.75);
     margin-bottom:20px;
 }
 
