--- a/app/views/businesses/_details.html.erb
+++ b/app/views/businesses/_details.html.erb
@@ -1,7 +1,7 @@
         <!-- Content Row -->
         <div class="row">
             <!-- Map Column -->
-            <div class="col-md-7">
+            <div class="col-md-4">
                 <% if @business.logo.blank? %>
                     <%= image_tag "nologo.png", width: "100%",:class => "img-responsive"%>
                  <% else %>
@@ -9,7 +9,12 @@
                  <% end %>
             </div>
             <!-- Contact Details Column -->
-            <div class="col-md-4">
+            <div class="col-md-8">
+             
+             <div id="map">
+                  <div id="geolocation"></div>
+             </div>
+
                 <h3><%= @business.name %></h3>  
                 <%= link_to "Suggest an Update", suggest_edits_path(id: @business.id) %>
                 <br>
