--- a/app/views/suggest_edits/index.html.erb
+++ b/app/views/suggest_edits/index.html.erb
@@ -1,43 +1,45 @@
 <%= render "layouts/header"%>
 <br><br><br><br>
-
 <div class="main">
   
-    <h4> Update business information </h4><br>
-    <%= simple_form_for @edit do |f|  %>
-    <div class="checkbox">
-       <%= f.input :business_closed, label: "The business is permanently closed!", :input_html => {  id: "permanent_closed", name: "payment_method"  }%>
-    </div>
+  <h4> Update business information </h4><br>
+  <%= simple_form_for(@edit, :url => url_for(:action => 'create', :controller => 'suggest_edits')) do |f|  %>
+  <div class="checkbox">
+    <%= f.input :business_closed, label: "The business is permanently closed!", input_html: { id: "permanent_closed" } %>
+  </div>
   
   <hr>
   <div id="suggest_and_edit" class="main" >
     
     <h5 class="text-warning">NAME</h5>
-    <%= f.input_field :name, autofocus: true, :class => 'form-control no-border' %>
+    <%= f.input :name, autofocus: true, input_html: { value: @business_suggest_edit.name }, :class => 'form-control no-border' %>
+
     <br><h5 class="text-warning">ADDRESS INFORMATION</h5>
-    <%= f.input :city, :class => 'form-control no-border' %>
-    <%= f.input :address, :class => 'form-control no-border' %>
-    <%= f.input :established, :class => 'form-control no-border' %>
-    <%= f.input :zip_code, :class => 'form-control no-border' %>
+    <%= f.input :city, input_html: { value: @business_suggest_edit.cities.first.name }, :class => 'form-control no-border' %>
+    <%= f.input :address, input_html: { value: @business_suggest_edit.location }, :class => 'form-control no-border' %>
+    <%= f.input :established, input_html: { value: @business_suggest_edit.established }, :class => 'form-control no-border' %>
+    <%= f.input :zip_code, input_html: { value: @business_suggest_edit.zip_code }, :class => 'form-control no-border' %>
+    
     <br><h5 class="text-warning">PHONE NUMBER</h5>
-    <%= f.input :business_tel, :class => 'form-control no-border' %>
-    <%= f.input :fax_number, :class => 'form-control no-border' %>
+    <%= f.input :business_tel, input_html: { value: @business_suggest_edit.phones.first }, :class => 'form-control no-border' %>
+    <%= f.input :fax_number, input_html: { value: @business_suggest_edit.phones.first }, :class => 'form-control no-border' %>
+    
     <br><h5 class="text-warning">OPENING HOURS</h5>
-      <%= f.input_field :opening_hours, :class => 'form-control no-border' %>
+    <%= f.input :opening_hours, input_html: { placeholder: "sogest for some working days" }, :class => 'form-control no-border' %>
+    
     <br><h5 class="text-warning">WEBSITES</h5>
-    <%= f.input :city, :class => 'form-control no-border' %>
-    <%= f.input :address, :class => 'form-control no-border' %>
-    <%= f.input :established, :class => 'form-control no-border' %>
-    <%= f.input :zip_code, :class => 'form-control no-border' %>
+    <%= f.input :website, input_html: { value: @business_suggest_edit.website }, :class => 'form-control no-border' %>
+    <%= f.input :facebook, input_html: { value: @business_suggest_edit.facebook, placeholder: "url www.facebook.com" }, :class => 'form-control no-border' %>
+    <%= f.input :instagram, input_html: { value: @business_suggest_edit.instagram, placeholder: "url www.instagram.com" }, :class => 'form-control no-border' %>
+    <%= f.input :google, input_html: { value: @business_suggest_edit.google,  placeholder: "your gmail " } , :class => 'form-control no-border' %>
     
   </div>
   <hr>
-  <div class="pull-right">
-    <%= f.button :submit, "Cancel", class: "btn-default" %>
-    <%= f.button :submit, "Submit", class: "btn-primary" %>
+  <div class="pull-right">  
+    <%= link_to "cancel", business_path(@business_suggest_edit.id), class: "btn-default" %>
+    <%= f.button :button, "Submit", class: "btn-primary" %>
   </div>
   <%end%>
-
-
 </div>
+
 <%= javascript_include_tag "dependent_fields" %>
