--- a/app/views/businesses/index.html.erb
+++ b/app/views/businesses/index.html.erb
@@ -1,72 +1,169 @@
- <!-- Navigation -->   
-   <%= render "layouts/header" %>
-    <!-- Page Content --><br>
-    <div class="container">
+<!doctype html>
+<html>
+<head>
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <title></title> 
+
+    <!-- toolkit styles -->
+    <!-- /toolkit styles -->
+
+</head>
+<body>
+
+
+
+    <header>
     
-        <!-- Page Heading/Breadcrumbs -->
-        <div class="row">
-            <div class="col-lg-12">
-                <h1 class="page-header">All businesses
-                    <small>*****</small>
-                </h1>
-                <ol class="breadcrumb">
-                    <li><a href="index.html">Home</a>
-                    </li>
-                    <li class="active">All businesses</li>
-                </ol>
+        <div class="container">
+            <div class="row header-nav">
+                <div class="col-md-3 text-left nav-item">
+                    <a href="<%= root_path %>">
+                        <%= image_tag "logo-sample.png" %>
+                    </a>
+                </div>
+    
+                <div class="col-md-6 text-center nav-item">
+                    <ul class="list-inline list-styled header-list">
+                        <li><a href="">Apps</a></li>
+                        <li><a href="">Gadgets</a></li>
+                        <li><a href="">Science</a></li>
+                        <li><a href="">Nature</a></li>
+                        <li><a href="#">Creative</a></li>
+                    </ul>
+                </div>
+    
+                <div class="col-md-3 text-right nav-item">
+                    <button class="btn btn-default">Sign Up</button>
+                    <div class="header-dropdown">
+                        <a href="#" data-toggle="dropdown">
+                            <%= image_tag "dropdown-icon.png" %>
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="dLabel">
+                            <li><a href="">Settings</a></li>
+                            <li><a href="">Profile</a></li>
+                            <li><a href="">Security</a></li>
+                            <li><a href="">Log Out</a></li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </div>
-        <!-- /.row -->
-     
-        <!-- Project One -->
-        <% @businesses.each do |business| %>
-            <div class="row">   
-                <div class="col-md-7">
-                 <% if business.logo.blank? %>
-                    <%= image_tag "nologo.png", width: "100%",:class => "img-responsive"%>
-                 <% else %>
-                   <%= image_tag business.logo_url, width: "80%",:class => "img-thumbnail"%>
-                 <% end %>
-                </div>
-                <div class="col-md-5">
-                    <h3><%= link_to business.name, business_path(business.id) %></h3>
-                    <h4><% business.categories.each do |category| %>
-                        | <%= category.name %> |
-                        <% end %>
-                    </h4>
-                    <p><%= business.description %></p>
-                    <%= link_to "View", "#" ,class: "btn btn-primary" %>
+    
+    </header>
+
+
+<section class="filter">
+    <div class="container">
+            <div class="row">
+                <div class="col-xs-6 center-block text-center view-title">
+                    <h3>All Businesses</h3>
+                    <h5 class="vert-offset-top-1">Your neighbourhood search engine YP.ca helps you easily access local listings for 1.5 million businesses across Canada.</h5>
                 </div>
             </div>
-            <!-- /.row -->
-            <hr>
-        <% end %>
+            <div class="row vert-offset-top-6">
+               
+                <div class="col-xs-12">
 
-        
-       
-
-        <!-- Pagination -->
-        <div class="row text-center">
-            <div class="col-lg-12">
-                <ul class="pagination">
-                    <div class="digg_pagination">  
-                        <%= will_paginate @businesses, :container => false %>
+                <% unless @businesses.blank? %>
+                 <% @businesses.each do |business| %>
+                    <div class="col-xs-4">
+                        <div class="thumbnail">
+                        <img src="http://lorempixel.com/400/290/food/6" alt="...">
+                        <div class="caption">
+                          <h4><%= business.name %></h4>
+                          <h6><%= business.description %></h6>
+                          <div class="vert-offset-top-2"></div>             
+                          <ul class="list-inline likes-ul">
+                            <li><span class="label label-default"><%= business.email %></span></li>
+                          </ul>
+                          <ul class="list-inline likes-ul pull-right">
+                            <li><i class="fa fa-star" aria-hidden="true"></i><%= business.average_rate %></li>
+                            <li><i class="fa fa-comment-o" aria-hidden="true"></i><%= Commontator::Thread.where(commontable_id: business.id).count %></li>
+                          </ul>
+                        </div>
+                      </div>
                     </div>
+                    <% end %>
+                <% end %>   
+                  <div class="row text-center">
+                    <div class="col-lg-12">
+                        <ul class="pagination">
+                            <div class="digg_pagination">  
+                                <%= will_paginate @businesses, :container => false %>
+                            </div>
+                        </ul>
+                    </div>
+                </div>
+                </div>  
+            </div>
+    </div>
+</section>
+
+
+
+<section class="payment">
+    <div class="container">
+        <div class="row">
+            
+            <div class="col-md-6 text-center center-block">
+                <h2>Easy and Secure</h2>
+                <h5 class="vert-offset-top-2">The payment process with Module is always nice and comfortable process for your business.</h5>
+                <ul class="list-inline payment-ul vert-offset-top-4">
+                    <li><%= image_tag "visa.png" %></li>
+                    <li><%= image_tag "mastercard.png" %></li>
+                    <li><%= image_tag "maestro.png" %></li>
+                    <li><%= image_tag "fla.png" %></li>
+                    <li><%= image_tag "square.png" %></li>
+                    <li><%= image_tag "paypal.png" %></li>
                 </ul>
             </div>
         </div>
-        <!-- /.row -->
-
-        <hr>
-        
-        <!-- Footer -->
-        <footer>
-            <div class="row">
-                <div class="col-lg-12">
-                    <p>Copyright &copy; Your Website 2014</p>
-                </div>
-            </div>
-        </footer>
-
-
     </div>
+</section><footer>
+
+    <div class="container">
+        <div class="row header-nav">
+            <div class="col-md-6 text-left nav-item footer-item">
+                <a href="#"><%= image_tag "footer-logo.png" %></a>
+                <p>&copy; 2016 Great Simple All rights reserved</p>
+            </div>
+
+            <div class="col-md-6 text-right nav-item">
+                <ul class="list-inline list-styled footer-list">
+                    <li><a href="#">Stories</a></li>
+                    <li><a href="#">Services</a></li>
+                    <li><a href="#">Work</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
+</header>   
+    <script src="https://code.jquery.com/jquery-1.12.0.min.js" type="text/javascript"></script>
+    <script src="http://malsup.github.io/jquery.cycle.all.js" type="text/javascript"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" type="text/javascript"></script>
+    <script   src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"   integrity="sha256-xNjb53/rY+WmG+4L6tTl9m6PpqknWZvRt0rO1SRnJzw="   crossorigin="anonymous"></script>
+     <script>
+          $(function() {
+            $( "#accordion" ).accordion({
+                 heightStyle: "content"
+            });
+          });
+  </script>
+  <script>
+  /*$(function() {
+    $( "#amount" ).val( "$" + $( "#slider-range" ).slider( "values", 0 ) +
+      " - $" + $( "#slider-range" ).slider( "values", 1 ) );
+  });*/
+  </script>
+
+    <!-- toolkit scripts -->
+
+    <!-- /toolkit scripts -->
+
+</body>
+</html>
