--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,127 +1,254 @@
-<%= render "layouts/header" %>
-<br><br>
-<!-- Page Content -->
-<div class="container">
-	<!-- Page Heading/Breadcrumbs -->
-	<div class="row">
-		<div class="col-lg-12">
-			<h1 class="page-header">Searching ....
-			</h1>
-			<ol class="breadcrumb">
-				<li><a href="index.html">Home</a>
-			</li>
-			<li class="active">Filter By:</li>
-			<li> <%=link_to "Open", businesses_open_path %> </li>
-		</ol>
-	</div>
-</div>
+<!doctype html>
+<html>
+<head>
 
-<div style="margin-left:54px">
-	<button type="button" class="btn btn-primary" data-toggle="collapse" data-target="#filter-panel">
-		<span class="glyphicon glyphicon-cog"></span> Show Filter
-	</button>
-</div>
-<br>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+	<title></title>	
+
+	<!-- toolkit styles -->
+	<!-- /toolkit styles -->
+
+</head>
+<body>
 
 
-<div class="container">
-	<div class="row">
-		<div id="filter-panel" class="collapse filter-panel">
-			<div class="panel panel-default">
-				<div class="panel-body">
 
-					<%= form_tag("/search/filter", method: "get", class: "navbar-form navbar-left" ) do %>
-					<div class="form-group" style="margin-left:30px">
-						<label class="filter-col" style="margin-left:30;" for="pref-perpage">Category:</label>
-						<!-- <select id="pref-perpage" class="form-control"> -->
-							<% @categories= Category.all.map(&:name) %>
-							<%= select_tag :category, options_for_select(@categories), class: "form-control" %>
-						</div> <!-- form group [rows] -->
-						
-						<div class="form-group" style="margin-left:30px">
-							<label class="filter-col" style="margin-left:30;" for="pref-perpage">City:</label>
-							<!-- <select id="pref-perpage" class="form-control"> -->
-							<% @cities = City.all %>
-							<%= select_tag :city,  options_from_collection_for_select(@cities, "id", "name"), class: "form-control" %>
-						</div> <!-- form group [rows] -->
-						
-						<div class="form-group" style="margin-left:30px">	
-						  <%= number_field_tag :rate, nil,  min: 0, max: 5, class: "form-control" %>
-							<i class="fa fa-star" aria-hidden="true"></i>						
-						</div>
-
-						<div class="form-group" style="margin-left:30px">
-							<div class="checkbox" style="margin-left:10px; margin-right:10px;">
-								<%= check_box_tag(:open, class: "form-control") %>
-								<%= label_tag(:open, "Open") %>
-							</div>
-							<button type="submit" class="btn btn-info filter-col"style="margin-left:30px">
-								Filter
-							</button>
-						</div>
-					<% end %>
-
-
-						</div>
+	<header>
+	
+		<div class="container">
+			<div class="row header-nav">
+				<div class="col-md-3 text-left nav-item">
+					<a href="<%= root_path %>">
+					 	<%= image_tag "logo-sample.png" %>
+					</a>
+				</div>
+	
+				<div class="col-md-6 text-center nav-item">
+					<ul class="list-inline list-styled header-list">
+						<li><a href="">Apps</a></li>
+						<li><a href="">Gadgets</a></li>
+						<li><a href="">Science</a></li>
+						<li><a href="">Nature</a></li>
+						<li><a href="#">Creative</a></li>
+					</ul>
+				</div>
+	
+				<div class="col-md-3 text-right nav-item">
+					<button class="btn btn-default">Sign Up</button>
+					<div class="header-dropdown">
+						<a href="#" data-toggle="dropdown">
+							<%= image_tag "dropdown-icon.png" %>
+						</a>
+						<ul class="dropdown-menu" aria-labelledby="dLabel">
+							<li><a href="">Settings</a></li>
+							<li><a href="">Profile</a></li>
+							<li><a href="">Security</a></li>
+							<li><a href="">Log Out</a></li>
+						</ul>
 					</div>
 				</div>
 			</div>
 		</div>
-
-
-		<% if @businesses.any? %>
-		<h4 style="margin-left:8%;"><%= @businesses.size %>  businesses found</h4>
-		<%#if @businesses.suggestions.any? %>
-		<!-- <h6 style="margin-left:8%;"> Did you mean: <%# link_to @businesses.suggestions.first,  search_index_path(query: @businesses.suggestions.first) %></h6> -->
-		<%# end %>
-		<% @businesses.each do |business| %>
-		<% next if @open && business.open != true %>
+	
+	</header>
+<div class="section-tabs">
+	<div class="container">
 		<div class="row">
-			<hr>
-			<div class="col-xs-6 col-md-3">
-				<% if business.logo.blank? %>
-				<%= image_tag "nologo.png", width: "80%", height: "90px"%>
-				<% else %>
-				<%= image_tag business.logo_url, width: "80%", height: "90px"%>
-				<% end %>
+			
+			<div class="col-md-2">
 			</div>
-			<div class="col-xs-12 col-sm-6 col-md-8">
-				<h4>
-				<%= link_to business.name, business_path(business) %>
-				</h4>
-				<% unless business.addresses.blank? %>
-				<p class="">
-					<% business.addresses.each do |address|  %>
-					<i class="fa fa-map-marker"></i>
-					<%= address.name %><br>
-					<% end %>
-				</p>
-				<% end %>
-				<p><i class="fa fa-clock-o"></i> Posted on August 28, 2013 at 10:00 PM</p>
-				<div class="col-lg-7">
-					<ol class="breadcrumb">
-						<li><i class="fa fa-angle-double-right"></i><a href="#"> Website</a></li>
-						<li><i class="fa fa-map-marker"></i><a href="#"> Get Directions</a></li>
-						<li class="dropdown"><i class="fa fa-phone"></i>
-							<a href="#" class="dropdown-toggle" data-toggle="dropdown">Telephone<b class="caret"></b></a>
-							<ul class="dropdown-menu">
-								<% business.phones do |phone| %>
-								<li>
-									<%= phone.number %>
-								</li>
-								<% end %>
+			<div class="col-md-6 text-right">
+				<span class="h6 strong">Sort By</span>
+				<select class="selectpicker" title="Price">
+				  <option>Mustard</option>
+				  <option>Ketchup</option>
+				  <option>Relish</option>
+				</select>
+				<select class="selectpicker" title="Brand">
+				  <option>Mustard</option>
+				  <option>Ketchup</option>
+				  <option>Relish</option>
+				</select>
+				<select class="selectpicker" title="Type">
+				  <option>Mustard</option>
+				  <option>Ketchup</option>
+				  <option>Relish</option>
+				</select>
+			</div>
+
+		</div>
+	</div>
+</div>
+
+<section class="filter">
+	<div class="container">
+			<div class="row">
+				<div class="col-xs-6 center-block text-center view-title">
+					<h3>You Might Like</h3>
+					<h5 class="vert-offset-top-1">Your neighbourhood search engine YP.ca helps you easily access local listings for 1.5 million businesses across Canada.</h5>
+				</div>
+			</div>
+			<div class="row vert-offset-top-6">
+				<div class="col-xs-4">
+					<div class="filter-aside">
+
+						<div class="padding-15 border-bottom">
+							<h5 class="strong lineheight-1">Filter <i class="fa fa-times pull-right" aria-hidden="true"></i></h5>
+						</div>
+
+						<div class="padding-20 border-bottom">
+							<h6 class="strong">Brand</h6>
+							<ul class="list-inline brand-ul">
+								<li><a href="">Apple</a></li>
+								<li><a href="">Apple</a></li>
+								<li><a href="" class="active">Apple</a></li>
+								<li><a href="">Apple</a></li> <br>
+								<li><a href="">Apple</a></li>
+								<li><a href="">Apple</a></li>
+								<li><a href="">Apple</a></li>
+								<li><a href="">Apple</a></li> <br>
+								<li><a href="">Apple</a></li>
+								<li><a href="">Apple</a></li>
+								<li><a href="">Apple</a></li>
 							</ul>
-						</li>
-					</li>
-				</ol>
+						</div>
+						<div class="padding-20 border-bottom">
+							<p>
+							  <label for="amount" class="filter-label">Price range:</label>
+								<div class="range-input">
+									<h6 class="strong">from</h6><input type="text" class="from-amount-range filter-input"><h6 class="strong">to</h6><input type="text" class="to-amount-range filter-input">
+								</div>
+							  <input type="text" id="amount" readonly style="border:0; color:#f6931f;">
+							</p>						 
+							<div id="slider-range"></div>
+						</div>
+
+						<div id="accordion">
+							  <h6 class="strong">Operation System <span class="bs-caret"><span class="caret"></span></span></h6>
+							  <div>
+							    <p>Mauris mauris ante, blandit et, ultrices a, susceros. Nam mi. Proin viverra leo ut odio. Curabitur malesuada. Vestibulum a velit eu ante scelerisque vulputate.</p>
+							  </div>
+							  <h6 class="strong">Material <span class="bs-caret"><span class="caret"></span></span></h6>
+							  <div>
+							    <p>Sed non urna. Donec et ante. Phasellus eu ligula. Vestibulum sit amet purus. Vivamus hendrerit, dolor at aliquet laoreet, mauris turpis porttitor velit, faucibus interdum tellus libero ac justo. Vivamus non quam. In suscipit faucibus urna. </p>
+							  </div>
+							  <h6 class="strong">Camera <span class="bs-caret"><span class="caret"></span></span></h6>
+							  <div>
+							    <p>Nam enim risus, molestie et, porta ac, aliquam ac, risus. Quisque lobortis. Phasellus pellentesque purus in massa. Aenean in pede. Phasellus ac libero ac tellus pellentesque semper. Sed ac felis. Sed commodo, magna quis lacinia ornare, quam ante aliquam nisi, eu iaculis leo purus venenatis dui. </p>
+							    <ul>
+							      <li>List item</li>
+							      <li>List item</li>
+							      <li>List item</li>
+							      <li>List item</li>
+							      <li>List item</li>
+							      <li>List item</li>
+							      <li>List item</li>
+							    </ul>
+							  </div>
+							   <h6 class="strong">Other Options <span class="bs-caret"><span class="caret"></span></span></h6>
+							  <div>
+							    <p>Sed non urna. Donec et ante. Phasellus eu ligula. Vestibulum sit amet purus. Vivamus hendrerit, dolor at aliquet laoreet, mauris turpis porttitor velit, faucibus interdum tellus libero ac justo. Vivamus non quam. In suscipit faucibus urna. </p>
+							  </div>
+						</div>
+
+						<div class="padding-20 border-bottom text-center filter-button">
+							<button class="btn btn-background">Apply Filter</button>
+						</div>
+
+					</div>
+				</div>
+				<div class="col-xs-8">
+
+				<% unless @businesses.blank? %>
+				 <% @businesses.each do |business| %>
+					<div class="col-xs-6">
+						<div class="thumbnail">
+					    <img src="http://lorempixel.com/400/290/food/6" alt="...">
+					    <div class="caption">
+					      <h4><%= business.name %></h4>
+					      <h6><%= business.description %></h6>
+					      <div class="vert-offset-top-2"></div>		        
+					      <ul class="list-inline likes-ul">
+					      	<li><span class="label label-default"><%= business.email %></span></li>
+					      </ul>
+					      <ul class="list-inline likes-ul pull-right">
+					      	<li><i class="fa fa-star" aria-hidden="true"></i><%= business.average_rate %></li>
+					      	<li><i class="fa fa-comment-o" aria-hidden="true"></i><%= Commontator::Thread.where(commontable_id: business.id).count %></li>
+					      </ul>
+					    </div>
+					  </div>
+					</div>
+					<% end %>
+				<% end %>	
+				</div>	
+			</div>
+	</div>
+</section>
+
+
+
+<section class="payment">
+	<div class="container">
+		<div class="row">
+			
+			<div class="col-md-6 text-center center-block">
+				<h2>Easy and Secure</h2>
+				<h5 class="vert-offset-top-2">The payment process with Module is always nice and comfortable process for your business.</h5>
+				<ul class="list-inline payment-ul vert-offset-top-4">
+					<li><%= image_tag "visa.png" %></li>
+					<li><%= image_tag "mastercard.png" %></li>
+					<li><%= image_tag "maestro.png" %></li>
+					<li><%= image_tag "fla.png" %></li>
+					<li><%= image_tag "square.png" %></li>
+					<li><%= image_tag "paypal.png" %></li>
+				</ul>
 			</div>
 		</div>
 	</div>
-	
-	<div>
-		
+</section><footer>
+
+	<div class="container">
+		<div class="row header-nav">
+			<div class="col-md-6 text-left nav-item footer-item">
+				<a href="#"><%= image_tag "footer-logo.png" %></a>
+				<p>&copy; 2016 Great Simple All rights reserved</p>
+			</div>
+
+			<div class="col-md-6 text-right nav-item">
+				<ul class="list-inline list-styled footer-list">
+					<li><a href="#">Stories</a></li>
+					<li><a href="#">Services</a></li>
+					<li><a href="#">Work</a></li>
+					<li><a href="#">Contact</a></li>
+				</ul>
+			</div>
+		</div>
 	</div>
-	<% end %>
-	<% else %>
-	<h5>Not found </h5>
-	<% end %>
+
+</header>	
+	<script src="https://code.jquery.com/jquery-1.12.0.min.js" type="text/javascript"></script>
+	<script src="http://malsup.github.io/jquery.cycle.all.js" type="text/javascript"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" type="text/javascript"></script>
+	<script   src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"   integrity="sha256-xNjb53/rY+WmG+4L6tTl9m6PpqknWZvRt0rO1SRnJzw="   crossorigin="anonymous"></script>
+	 <script>
+		  $(function() {
+		    $( "#accordion" ).accordion({
+		    	 heightStyle: "content"
+		    });
+		  });
+  </script>
+  <script>
+  /*$(function() {
+    $( "#amount" ).val( "$" + $( "#slider-range" ).slider( "values", 0 ) +
+      " - $" + $( "#slider-range" ).slider( "values", 1 ) );
+  });*/
+  </script>
+
+	<!-- toolkit scripts -->
+
+	<!-- /toolkit scripts -->
+
+</body>
+</html>
